Solved [Bug] Discord button is not visibile in dark mode #135

--- a/index.css
+++ b/index.css
@@ -404,6 +404,10 @@ nav {
   transition: all 0.4s ease-in;
 }
 
+.dark .discord_btn {
+  color: #7277e7;
+}
+
 .dark .theme-switcher {
   background-color: #262626;
 }
